# arches-lingo

./: .gitattributes  CHANGELOG.md  MANIFEST.in  README.md  gettext.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts  vitest.setup.mts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  on-create.sh  post-start.sh
.github/workflows/: build-ci-container.yml  main.yml
arches_lingo/: apps.py  const.py  database_routers.py  models.py  permissions.py  querysets.py  serializers.py  settings.py  tasks.py  urls.py
arches_lingo/etl_modules/: decorators.py  lingo_resource_exporter.py  migrate_to_lingo.py
arches_lingo/functions/: reciprocal_relationship.py  update_concept_lifecycle_states_for_scheme.py
arches_lingo/locale/: ar.json  de.json  el.json  en.json  es.json  fr.json  messages.pot  pt.json  zh.json
arches_lingo/migrations/: 0002_load_lingo_lists.py  0003_add_concept_identifier_counters.py  0003_add_languages.py  0004_add_concept_identifier_counters.py  0004_add_language_widget_mapping.py  0004_reciprocal_relationship_function.py  0004_update_scheme_concept_lifecycles.py  0005_add_scheme_lifecycle_handler_concept_identifier.py  0005_advanced_search_models.py  0005_reciprocal_relationship_function.py  0006_add_lingo_editor_group.py  (+18 more)
docker/: entrypoint.sh
releases/: 1.0.0.md  1.0.0a.md  1.1.0.md
scripts/: convert_getty_aat.py  ensure_aat_languages.py  extract_getty_aat_sources.py
tests/: sparql_tests.py  test_advanced_search.py  test_concept_lifecycle.py  test_concept_uri_lookup.py  test_dashboard.py  test_edit_log.py  test_guide_term.py  test_import_export.py  test_reciprocal_relationship.py  test_resource_list.py  test_settings.py  test_update_concept_lifecycle_states_for_scheme.py  test_user_profile.py  test_utils.py  tests.py
(+301 files in other folders)
